Fix *module not loaded* unload msg block

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1498,6 +1498,7 @@ proc cmdModuleUnload {context match auto force onlyureq onlyndep args} {
                reportInfo "Module '$modname' is not loaded"
                reportMsgRecord "Unloading [getModuleDesignation $msgrecid {}\
                   2]"
+               popMsgRecordId
             }
          } else {
             # return error code in case of empty module name
