Raise error when module switch in modulefile fails
Like for "module unload" and "module load", raise an error when "module
switch" command in modulefile fails to either its unload or load phase.
Error is not raised when --force option is set.

"module switch" in modulefile was previously raising error either:
* at the end of whole modulefile evaluation when conflict exists
* right at the end of the "module switch" command if switched-on module
  requirement was not satisfied.

Thus in some cases, errors during "module switch" did not lead to an
error raise and a modulefile evaluation stop. Especially when switch
unload phase fails but without registering a conflict.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -440,7 +440,10 @@ proc cmdModuleIntSwitch {mode tag_list args} {
    # operation. Could be removed from the modfile scope in a future release.
    # Use `module unload` and `module load` commands in modulefiles instead.
    if {$uasked || $mode eq {load}} {
-      cmdModuleSwitch $uasked $tag_list {*}$args
+      set ret [cmdModuleSwitch $uasked $tag_list {*}$args]
+      if {!$uasked && $ret && ![getState force]} {
+         knerror {} MODULES_ERR_SUBFAILED
+      }
    } else {
       # find what has been asked for unload and load
       lassign $args swunmod swlomod
@@ -628,6 +631,8 @@ proc cmdModuleSwitch {uasked tag_list old {new {}}} {
    if {!$uasked && [info exists ret_load] && $argnew ne {}} {
       prereqAnyModfileCmd 0 0 $argnew
    }
+
+   return [expr {$ret_unload || $ret_load}]
 }
 
 proc cmdModuleSave {{coll default}} {
