ts: add prereq/module load urequn sticky tests in 50/610

--- a/testsuite/modulefiles.4/err/.modulerc
+++ b/testsuite/modulefiles.4/err/.modulerc
@@ -10,11 +10,12 @@ if {[info exists env(TESTSUITE_ABORT_ON_ERROR)]} {
         load-any_first_hard_hidden - try-load_last_hard_hidden - try-load_first_hard_hidden {
             module-hide --hard err/1.0
         }
-        sticky - sticky_forbidden - switch_sticky - depun_sticky - load_depun_sticky {
+        sticky - sticky_forbidden - switch_sticky - depun_sticky - load_depun_sticky -\
+        urequn_sticky - load_urequn_sticky {
             module-tag sticky err/1.0
         }
         super-sticky - super-sticky_forbidden - switch_super-sticky - depun_super-sticky -\
-        load_depun_super-sticky {
+        load_depun_super-sticky - urequn_super-sticky - load_urequn_super-sticky {
             module-tag super-sticky err/1.0
         }
         sticky_forbidden_same {
