--- a/testsuite/modulefiles.4/err/.modulerc
+++ b/testsuite/modulefiles.4/err/.modulerc
@@ -12,13 +12,17 @@ if {[info exists env(TESTSUITE_ABORT_ON_ERROR)]} {
         }
         sticky - sticky_forbidden - switch_sticky - depun_sticky - load_depun_sticky -\
         urequn_sticky - load_urequn_sticky - switch_depun_sticky - switch_load_depun_sticky -\
-        unload_switch_depun_sticky - unload_switch_load_depun_sticky {
+        unload_switch_depun_sticky - unload_switch_load_depun_sticky - switch_urequn_sticky -\
+        switch_load_urequn_sticky - unload_switch_urequn_sticky -\
+        unload_switch_load_urequn_sticky {
             module-tag sticky err/1.0
         }
         super-sticky - super-sticky_forbidden - switch_super-sticky - depun_super-sticky -\
         load_depun_super-sticky - urequn_super-sticky - load_urequn_super-sticky -\
         switch_depun_super-sticky - switch_load_depun_super-sticky -\
-        unload_switch_depun_super-sticky - unload_switch_load_depun_super-sticky {
+        unload_switch_depun_super-sticky - unload_switch_load_depun_super-sticky -\
+        switch_urequn_super-sticky - switch_load_urequn_super-sticky -\
+        unload_switch_urequn_super-sticky - unload_switch_load_urequn_super-sticky {
             module-tag super-sticky err/1.0
         }
         sticky_forbidden_same {
