Report load urequn warning in --no-auto mode locally

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1088,7 +1088,7 @@ proc cmdModuleIntLoad {topcall command mode tag_list args} {
                ne {}} {
                if {[cmdModuleUnload urequn match 1 0 1 1 $unmod]} {
                   reportWarning "Unload of useless requirement\
-                     [getModuleDesignation loaded $unmod] failed" 1
+                     [getModuleDesignation loaded $unmod] failed"
                }
             }
          }
