Report switch urequn warning in --no-auto mode locally

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -470,7 +470,7 @@ proc cmdModuleIntSwitch {mode tag_list args} {
                $priormodlist]] ne {}} {
                if {[cmdModuleUnload urequn match 1 0 1 1 $unmod]} {
                   reportWarning "Unload of useless requirement\
-                     [getModuleDesignation loaded $unmod] failed" 1
+                     [getModuleDesignation loaded $unmod] failed"
                }
             }
          }
