Report unload urequn warning locally

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1737,7 +1737,7 @@ proc cmdModuleUnload {context match auto force onlyureq onlyndep args} {
                      # are required by unmod (whose unload failed) are
                      # withdrawn from UReqUn module list
                      reportWarning "Unload of useless requirement\
-                        [getModuleDesignation loaded $unmod] failed" 1
+                        [getModuleDesignation loaded $unmod] failed"
                      lassign [getDiffBetweenList $urequnlist\
                         [getRequiredLoadedModuleList [list $unmod]]]\
                         urequnlist
