Report unload depun warning locally
Dependent unload mechanism is only triggered from top level evaluation.
So dependent unload warnings were already only emitted to the top level
message block.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1642,7 +1642,7 @@ proc cmdModuleUnload {context match auto force onlyureq onlyndep args} {
                         loaded $unmod] failed"
                      ##nagelfar ignore Found constant
                      if {[getState force] || $force} {
-                        reportWarning $errMsg 1
+                        reportWarning $errMsg
                      } else {
                         knerror $errMsg
                      }
