New year (2024) copyright mention update

--- a/tcl/cache.tcl.in
+++ b/tcl/cache.tcl.in
@@ -1,7 +1,7 @@
 ##########################################################################
 
 # CACHE.TCL, cache management procedures
-# Copyright (C) 2022 Xavier Delaruelle
+# Copyright (C) 2022-2024 Xavier Delaruelle
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
