--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -938,7 +938,7 @@ if {[catch {
    clearAllMsgRecordId
    # render error if not done yet
    if {$errorCode ne {MODULES_ERR_RENDERED}} {
-      raiseErrorCount
+      incrErrorCount
       renderFalse
    }
    # report stack trace in addition to the error message if error is unknown
