Report conflicting module rather conflict spec
Update conflict message to report loaded module name that conflicts
rather conflict module specification.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1280,12 +1280,10 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
             if {!$is_con_mod_conun || $is_con_mod_loading} {
                set is_con_mod_eval [isModuleEvaluated any $modnamevr\
                   {*}$modconlist]
-               # more appropriate msg if an evaluation was attempted or is
-               # by-passed. error is reported using declared conflict name (as
-               # if it was raised from a conflict modulefile command)
+               # more appropriate msg if an eval was attempted or by-passed
                set con_msg [expr {$is_con_mod_eval || [getState force] ?\
-                  [getConIsLoadedMsg $moddecconlist $is_con_mod_loading] :\
-                  [getErrConflictMsg $moddecconlist]}]
+                  [getConIsLoadedMsg $modconlist $is_con_mod_loading] :\
+                  [getErrConflictMsg $modconlist]}]
             } else {
                set con_msg {}
             }
