--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -2061,13 +2061,16 @@ proc reportMissingPrereqError {curmodnamevr args} {
 }
 
 # create appropriate message and kind of report when a conflict is detected
-proc reportPresentConflictError {curmodnamevr mod isloading} {
-   set is_con_mod_eval [isModuleEvaluated any $curmodnamevr $mod]
-   set msg [expr {$is_con_mod_eval || [getState force] ? [getConIsLoadedMsg\
-      [list $mod] $isloading] : [getErrConflictMsg $mod]}]
+proc reportPresentConflictError {curmodnamevr con_mod is_loading} {
+   if {[isModuleEvaluated any $curmodnamevr $con_mod] || [getState force]} {
+      set msg [getConIsLoadedMsg [list [getModuleDesignation loaded\
+         $con_mod]] $is_loading]
+   } else {
+      set msg [getErrConflictMsg [list $con_mod]]
+   }
 
    # indicate message has already been reported
-   lappend ::report_conflict([currentState evalid]) $mod
+   lappend ::report_conflict([currentState evalid]) $con_mod
 
    knerrorOrWarningIfForced $msg MODULES_ERR_GLOBAL
 }
