Simplify conflict msg check now actual module is recorded
Conflicting loaded module is now reported in error message and recorded
rather conflict spec. It is thus easier to determine if this conflict
has already been reported when checking after load evaluation.

--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -2075,37 +2075,12 @@ proc reportPresentConflictError {curmodnamevr con_mod is_loading} {
    knerrorOrWarningIfForced $msg MODULES_ERR_GLOBAL
 }
 
-proc isConflictErrorAlreadyReported {msgrecid modconlist moddecconlist} {
-   set already_reported 0
+proc isConflictErrorAlreadyReported {msgrecid mod_con_list} {
    if {[info exists ::report_conflict($msgrecid)]} {
-      defineModEqProc [isIcase] [getConf extended_default]
-      # check if conflict has not been already reported with an alt name
-      foreach modcon $modconlist {
-         foreach reportmod $::report_conflict($msgrecid) {
-            if {[modEq $reportmod $modcon eqstart 1 2 1]} {
-               set already_reported 1
-               break
-            }
-         }
-         if {$already_reported} {
-            break
-         }
-      }
-      if {!$already_reported} {
-         foreach moddeccon $moddecconlist {
-            foreach reportmod $::report_conflict($msgrecid) {
-               if {[modEq $reportmod $moddeccon eqstart]} {
-                  set already_reported 1
-                  break
-               }
-            }
-            if {$already_reported} {
-               break
-            }
-         }
-      }
+      return [isIntBetweenList $mod_con_list $::report_conflict($msgrecid)]
+   } else {
+      return 0
    }
-   return $already_reported
 }
 
 # ;;; Local Variables: ***
