--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1271,8 +1271,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
          # raise an error if a conflict violation is detected
          # do that after modfile evaluation to give it the chance to solve its
          # (module unload) conflicts through its evaluation
-         lassign [doesModuleConflict $modname] doescon modconlist\
-            moddecconlist
+         lassign [doesModuleConflict $modname] doescon modconlist
          if {$doescon} {
             set is_con_mod_conun [isModuleEvaluated conun $modnamevr\
                {*}$modconlist]
@@ -1288,8 +1287,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
                set con_msg {}
             }
 
-            if {![isConflictErrorAlreadyReported $msgrecid $modconlist\
-               $moddecconlist]} {
+            if {![isConflictErrorAlreadyReported $msgrecid $modconlist]} {
                knerrorOrWarningIfForced $con_msg
             }
          }
