--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1275,7 +1275,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
          if {$doescon} {
             set is_con_mod_conun [isModuleEvaluated conun $modnamevr\
                {*}$modconlist]
-            set is_con_mod_loading [is-loading $modconlist]
+            set is_con_mod_loading [is-loading {*}$modconlist]
             if {!$is_con_mod_conun || $is_con_mod_loading} {
                set is_con_mod_eval [isModuleEvaluated any $modnamevr\
                   {*}$modconlist]
