--- a/.github/workflows/linux_tests.yaml
+++ b/.github/workflows/linux_tests.yaml
@@ -348,9 +348,9 @@ jobs:
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl9.0
-          curl -L --output tcl9.0a3-src.tar.gz http://downloads.sourceforge.net/tcl/tcl9.0a3-src.tar.gz
-          tar xfz tcl9.0a3-src.tar.gz
-          cd tcl9.0a3/unix
+          curl -L --output tcl9.0b1-src.tar.gz http://downloads.sourceforge.net/tcl/tcl9.0b1-src.tar.gz
+          tar xfz tcl9.0b1-src.tar.gz
+          cd tcl9.0b1/unix
           ./configure
           make -j
           sudo make install
