--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1277,12 +1277,8 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
                {*}$modconlist]
             set is_con_mod_loading [is-loading {*}$modconlist]
             if {!$is_con_mod_conun || $is_con_mod_loading} {
-               set is_con_mod_eval [isModuleEvaluated any $modnamevr\
-                  {*}$modconlist]
-               # more appropriate msg if an eval was attempted or by-passed
-               set con_msg [expr {$is_con_mod_eval || [getState force] ?\
-                  [getConIsLoadedMsg $modconlist $is_con_mod_loading] :\
-                  [getErrConflictMsg $modconlist]}]
+               set con_msg [getPresentConflictErrorMsg $modnamevr\
+                  $modconlist $is_con_mod_loading]
             } else {
                set con_msg {}
             }
